[css-flexbox] Fix size comparison when scrollbars are present

BUG=646288

Review-Url: https://codereview.chromium.org/2342663002
Cr-Commit-Position: refs/heads/master@{#418846}

Former-commit-id: 4567d59b87472d29a1fc660a55cd8aa56c83f280